--- a/_layouts/supo_post.html
+++ b/_layouts/supo_post.html
@@ -20,8 +20,9 @@
 <img alt='Susan Potter' height=30 src='http://susanpotter.net/images/logo.png' width=128 />
 </a>
 <nav>
-<a href='/projects'>Open Source Projects</a>
-<a href='/projects'>7languages7weeks</a>
+<a href='http://susanpotter.net'>Personal Site</a>
+<a href='http://github.com/mbbx6spp'>Open Source Projects</a>
+<a href='http://mbbx6spp.github.com/7languages7weeks'>7languages7weeks</a>
 <a target=_blank id=twitter class=icon href='http://twitter.com/SusanPotter'><img src='/images/twitter.png' height=30 width='' alt="@SusanPotter's Twitter feed" border=0 /></a>
 
 <a target=_blank id=linkedin class=icon href='http://www.linkedin.com/in/susanpotter'><img src='/images/linkedin.png' height=30 width='' alt=''/></a>
