--- a/_layouts/supo_home.html
+++ b/_layouts/supo_home.html
@@ -60,13 +60,18 @@ Twitter Timeline
 </div>
 <footer>
 <p>
-
 Copyright &copy; 2006-2011 <a href="http://susanpotter.net">Susan Potter</a>.
 </p>
 <p>
 This website is developed by <a href="http://susanpotter.net">Susan Potter</a>.
 </p>
 </footer>
+    <script>
+      var _gaq=[["_setAccount","UA-{{ site.ga }}"],["_trackPageview"]];
+      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
+      g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
+      s.parentNode.insertBefore(g,s)}(document,"script"));
+    </script>
 </body>
 </html>
 
